--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,11 +13,21 @@ const { title, description } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body>
     <slot />
+    <footer
+      class="flex w-full py-4 text-center border-t-2 border-zinc-300 mt-10"
+    >
+      <span class="mx-auto"
+        >&copy; 2024 <a
+          href="https://barillari.me"
+          class="underline text-indigo-700">Giuseppe Barillari</a
+        ></span
+      >
+    </footer>
   </body>
 </html>
