--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="ManyCore Visualiser" description="">
   <main>
     <Hero />
-    <section id="info" class="grid grid-cols-[50%_40%] px-5">
+    <section id="info" class="grid grid-cols-[60%_40%] px-5">
       <div>
         <h2 class="text-5xl font-bold">What is ManyCore Visualiser?</h2>
         <p class="text-lg text-justify pt-4">
@@ -20,6 +20,7 @@ import Layout from "../layouts/Layout.astro";
           it in a publication.
         </p>
       </div>
+        <img src="/render.png" class="object-contain w-3/4 self-center mx-auto"/>
     </section>
     <section
       id="download"
