Add manual link
Signed-off-by: Giuseppe Barillari <joe2k01dev@gmail.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,8 +41,10 @@ import Layout from "../layouts/Layout.astro";
     <section id="manual" class="flex flex-col items-center justify-center px-5">
       <h2 class="text-2xl lg:text-5xl font-bold">Get the manual</h2>
       <p class="text-lg pt-4">
-        The ManyCore Visualier user manual is currently under construction.
-        Please check again soon!
+        The ManyCore Visualier user manual is available within the program
+        itself. A web version is available <a
+          href="https://manycore.barillari.me/manycore_manual/">here</a
+        >.
       </p>
     </section>
   </main>
