--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import Layout from "../layouts/Layout.astro";
       <h2 class="text-2xl lg:text-5xl font-bold">Get the manual</h2>
       <p class="text-lg pt-4">
         The ManyCore Visualier user manual is available within the program
-        itself. A web version is available <a
+        itself. A web version is available <a class="text-indigo-600 underline"
           href="https://manycore.barillari.me/manycore_manual/">here</a
         >.
       </p>
